# zs.zflow

./: README.md  pyproject.toml  test.py
src/zs/zflow/: __init__.py  _internal.py  _misc.py  builtin.py  cli.py  core.py  utils.py
test/: emod.py  test1.yml  test2.yml
