[project]
name = "zs.zflow"
version = "0.2.0"
description = "single task workflow system"
authors = [
    { name = "ZackaryW", email = "gitzackw@gmail.com" }
]
dependencies = [
    "pyyaml>=6.0.2",
    "zuu>=7.3.0",
    "croniter>=6.0.0",
    "dateparser>=1.2.1",
    "psutil>=7.0.0",
    "pygetwindow>=0.0.9",
    "click>=8.1.8",
    "watchdog>=6.0.0",
    "toml>=0.10.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"zs.zflow" = "zs.zflow.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "zs-zuto-testmod @ git+https://github.com/z-uu/zs.zuto.testmod.git",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zs"]
